adjust release list & details parser

--- a/Symusic/src/resources/scnlog.properties
+++ b/Symusic/src/resources/scnlog.properties
@@ -2,7 +2,7 @@ site=SCENELOG
 
 base_url=https://scnlog.eu
 url=https://scnlog.eu/music/{0}
-paging=/page/{0}
+params_page=/page/{0}
 
 loop_list_item=status-publish
 
@@ -14,8 +14,10 @@ item_url= h1 > a || attr=href
 date_format=MMMMM d yyyy
 
 
-search_byGenre=music/{0}
-search_byName=s={0}&cat=8
+search_byGenre=[base_url]/music/{0}[params_page]
+search_byReleaseName=[base_url]?s={0}&cat=8
+search_byName=[base_url]?s={0}&cat=8
+search_byName_format=replace= (+)
 #release_search_byCrew=s={0}&cat=8
 
 release_genre=class=title || small || text() || split=\\|(1)
