prima attivazione con scenelog e bestelectronicmusic

--- a/Symusic/src/resources/prescene.properties
+++ b/Symusic/src/resources/prescene.properties
@@ -1,23 +1,21 @@
 site=PRESCENE
 
-base_url=https://prescene.tk
-url=https://prescene.tk/index.php
+base_url=https://prescene.tk/index.php
 page_gap=50
+page_start=0
 params_page=skip={0}
-params_genre=genre={0}
-params_crew=group={0}
+
+search_byGenre=[base_url]?genre={0}&[params_page]
+search_byCrew=[base_url]?group={0}&[params_page]
 
 
-loop_list_item=status-publish
+loop_list_item=class=row || excludeFirst
 
-item_release_name= h1 > a || text()
-item_release_date= small > span || text()
-item_genre= small > a || get=1 || text()
-item_url= h1 > a || attr=href
-
-
-class_release_group=table
-class_release_item=row
+item_release_name=class=cell || get=2 || a || text()
+item_release_date= class=cell || get=1 || text()
+item_genre= class=cell || get=5 || text()
 
 
-date_format=yyyy-MM-dd
+date_format=yyyy-MM-dd HH:mm:ss
+
+quality=Genre=7|ReleaseDate=10
