--- a/Symusic/src/resources/scnlog.properties
+++ b/Symusic/src/resources/scnlog.properties
@@ -1,7 +1,6 @@
 site=SCENELOG
 
 base_url=https://scnlog.eu
-url=https://scnlog.eu/music/{0}
 params_page=/page/{0}
 
 loop_list_item=status-publish
@@ -13,11 +12,12 @@ item_url= h1 > a || attr=href
 
 date_format=MMMMM d yyyy
 
+release_fault_page=class=page-header || class=page-title
 
 search_byGenre=[base_url]/music/{0}[params_page]
-search_byReleaseName=[base_url]?s={0}&cat=8
-search_byName=[base_url]?s={0}&cat=8
-search_byName_format=replace= (+)
+search_byName=[base_url]/music/{0}
+#search_byName_format=replaceAll=[^a-zA-Z0-9_-]+<<>> || lowerCase
+search_byReleaseName=[base_url]/music/{0}
 #release_search_byCrew=s={0}&cat=8
 
 release_genre=class=title || small || text() || split=\\|(1)
