--- a/Symusic/src/resources/symusic.properties
+++ b/Symusic/src/resources/symusic.properties
@@ -1,6 +1,9 @@
 # massimo numero di thread avviabili
 maxActiveThread=1
 
+releaseListSite=prescene
+releaseDetailSite=scnlog|bestelectronicmusic
+
 releaseExclusion=-CABLE-,-SAT-,-SBD-,-Dab-,-DAB-,-FM-,-DVBS-,-LINE-,-DVBC-,-STREAM-,-DVBT-
 
-releaseVa=VA
+releaseVa=VA_-,VA-
