--- a/Symusic/WebContent/WEB-INF/web.xml
+++ b/Symusic/WebContent/WEB-INF/web.xml
@@ -62,6 +62,12 @@
 		<servlet-class>it.fivano.symusic.action.LinkServlet</servlet-class>
 	</servlet>
 	
+	<servlet>
+		<display-name>MassiveReleaseServlet</display-name>
+		<servlet-name>MassiveReleaseServlet</servlet-name>
+		<servlet-class>it.fivano.symusic.action.MassiveReleaseServlet</servlet-class>
+	</servlet>
+	
 	<servlet-mapping>
 		<servlet-name>InitServlet</servlet-name>
 		<url-pattern>/InitServlet</url-pattern>
@@ -105,6 +111,10 @@
 	<servlet-mapping>
 		<servlet-name>LinkServlet</servlet-name>
 		<url-pattern>/LinkServlet</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>MassiveReleaseServlet</servlet-name>
+		<url-pattern>/MassiveReleaseServlet</url-pattern>
 	</servlet-mapping>
 
 	<welcome-file-list>
