aggiustamenti vari + batch one shot

--- a/Symusic/src/resources/scenelog.properties
+++ b/Symusic/src/resources/scenelog.properties
@@ -1,5 +1,5 @@
-url=http://scnlog.eu/
-url_music=http://scnlog.eu/music/
+url=http://scnlog.me/
+url_music=http://scnlog.me/music/
 url_action=
 params=s={0}&cat=8
 
