--- a/Symusic/src/resources/prescene.properties
+++ b/Symusic/src/resources/prescene.properties
@@ -7,7 +7,9 @@ params_page=skip={0}
 
 search_byGenre=[base_url]?genre={0}&[params_page]
 search_byCrew=[base_url]?group={0}&[params_page]
-
+search_byName=[base_url]?search={0}&[params_page]
+search_byName_maxItem=300
+search_byName_format=replace= <<%20>>
 
 loop_list_item=class=row || excludeFirst
 
