nuovo cloudforge resolver

--- a/Symusic/src/resources/symusic.properties
+++ b/Symusic/src/resources/symusic.properties
@@ -2,7 +2,8 @@
 maxActiveThread=1
 
 releaseListSite=prescene
-releaseDetailSite=scnlog|bestelectronicmusic
+releaseDetailSite=scnlog
+#releaseDetailSite=scnlog|bestelectronicmusic
 
 releaseExclusion=-CABLE-,-SAT-,-SBD-,-Dab-,-DAB-,-FM-,-DVBS-,-LINE-,-DVBC-,-STREAM-,-DVBT-
 
